﻿GNomEx Release Notes

5.0.9.4 (Feb 10,2011)
---------------------
Provide java main for creating analysis in batch job

5.0.9.3 (Jan 31, 2011)
----------------------
- Fix bug that was preventing CC Number from importing on sample sheet (Submit request).
- Fix events on comboboxes on Submit Request tabs to fire when user hits hot key for selection.

5.0.9.2 (Jan 25, 2011)
---------------------
- Fix 'Add group' bug caused by missing parameter for institutions

5.0.9.1 (Jan 20, 2010)
----------------------
- Make error handling more robust and error messages more informative for 'Upload sample sheet'.
- Fix bug that was causing lab dropdown to clear on 'Submit Request' when admin refreshed dictionaries in the middle of a Submit Request operation.  

5.0.9 (Jan 18, 2010)
---------------------
- Added institution level visibility on experiments and analysis
- Fix Experiment Edit window to show checkbox for 'CC Number'.  
- Fix selection problem with lab dropdown on "Submit Request" window. (Didn't refresh app user combo on first selection.)
- Avoid simultaneous calls to get billing list, get pricing list to prevent random error on Windows 7 clients.  (Get pricing when user clicks on pricing tab in Billing.)


5.0.8.3 (Jan 5, 2011)
---------------------
- Fix date comparisons to use YYYY-MM-DD for sql queries to work on MySQL platforms.
- Fixed bug that was causing blank analysis when user clicked on Analysis link for Experiment that belongs to a different lab.
- Fix bug that was prevent analysis file from being removed from file system when it was back-door copied rather than uploaded from GNomEx.
- Fix event timing on 'Upload analysis files' so that file only appears in 'Uploaded' list when entire file has been uploaded.

5.0.8.2 (Jan 3, 2011)
----------------------
- Worked around Mac Copy/Paste problem that was stripping new line characters by introducing TextAreaWorkaround class.
- Moved gnomex_db_ddl.sql, gnomex_db_populate.sql to /sql subdir